k8s/ingress/ingress-calculator.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-calculator
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /plus/*
            backend:
              serviceName: plus-api-service
              servicePort: 80
          - path: /minus/*
            backend:
              serviceName: minus-api-service
              servicePort: 80
          - path: /multiply/*
            backend:
              serviceName: multiply-api-service
              servicePort: 80
          - path: /divide/*
            backend:
              serviceName: divide-api-service
              servicePort: 80
